@@ -528,14 +528,14 @@ $labels['replyallmode'] = 'Default action of [Reply all] button';
 $labels['replyalldefault'] = 'reply to all';
 $labels['replyalllist'] = 'reply to mailing list only (if found)';
 
-$labels['folder']  = 'Folder';
-$labels['folders']  = 'Folders';
-$labels['foldername']  = 'Folder name';
-$labels['subscribed']  = 'Subscribed';
+$labels['folder'] = 'Folder';
+$labels['folders'] = 'Folders';
+$labels['foldername'] = 'Folder name';
+$labels['subscribed'] = 'Subscribed';
 $labels['messagecount'] = 'Messages';
-$labels['create']  = 'Create';
-$labels['createfolder']  = 'Create new folder';
-$labels['managefolders']  = 'Manage folders';
+$labels['create'] = 'Create';
+$labels['createfolder'] = 'Create new folder';
+$labels['managefolders'] = 'Manage folders';
 $labels['specialfolders'] = 'Special Folders';
 $labels['properties'] = 'Properties';
 $labels['folderproperties'] = 'Folder properties';
@@ -545,9 +545,10 @@ $labels['info'] = 'Information';
 $labels['getfoldersize'] = 'Click to get folder size';
 $labels['changesubscription'] = 'Click to change subscription';
 $labels['foldertype'] = 'Folder Type';
-$labels['personalfolder']  = 'Private Folder';
-$labels['otherfolder']  = 'Other User\'s Folder';
-$labels['sharedfolder']  = 'Public Folder';
+$labels['personalfolder'] = 'Private Folder';
+$labels['otherfolder'] = 'Other User\'s Folder';
+$labels['sharedfolder'] = 'Public Folder';
+$labels['findfolders'] = 'Find folders';
 
 $labels['sortby'] = 'Sort by';
 $labels['sortasc']  = 'Sort ascending';
@@ -597,6 +598,8 @@ $labels['arialabelmailsearchform'] = 'Email message search form';
 $labels['arialabelcontactsearchform'] = 'Contacts search form';
 $labels['arialabelmailquicksearchbox'] = 'Email search input';
 $labels['arialabelquicksearchbox'] = 'Search input';
+$labels['arialabelfoldersearchfilter'] = 'Folder listing filter';
+$labels['arialabelfoldersearchform'] = 'Folder search form';
 $labels['arialabelfolderlist'] = 'Email folder selection';
 $labels['arialabelmessagelist'] = 'Email Messages Listing';
 $labels['arialabelmailpreviewframe'] = 'Message preview';
@@ -625,6 +628,7 @@ $labels['arialabelabookgroupoptions'] = 'Addressbook/group options';
 $labels['arialabelpreferencesform'] = 'Preferences form';
 $labels['arialabelidentityeditfrom'] = 'Identity edit form';
 $labels['arialabelresonseeditfrom'] = 'Response edit form';
+$labels['arialabelsearchterms'] = 'Search terms';
 
 $labels['helplistnavigation'] = 'List keyboard navigation';
 $labels['helplistkeyboardnavigation'] = "Arrows up/down: Move row focus/selection.
