@@ -211,6 +211,19 @@
 	background-position: 4px -550px;
 }
 
+#folderslist .boxtitle a.iconbutton.search {
+	background-position: -2px -317px;
+	cursor: pointer;
+	position: absolute;
+	right: 8px;
+	top: 8px;
+	width: 16px;
+}
+
+#folderslist .listsearchbox + .scroller {
+	top: 34px;
+}
+
 #folderslist,
 #identitieslist {
 	position: absolute;
