@@ -1959,6 +1959,7 @@ ul.proplist li {
 	position: relative;
 	padding: 4px;
 	background: #c7e3ef;
+	display: none;
 }
 
 .listsearchbox input {
