@@ -17,7 +17,19 @@
 <div id="settings-right" role="main">
 
 <div id="folderslist" class="uibox listbox">
-<h2 id="folderslist-header" class="boxtitle"><span style="float:right"><roundcube:label name="subscribed" /></span><roundcube:label name="folders" /></h2>
+<h2 id="folderslist-header" class="boxtitle">
+	<roundcube:label name="folders" />
+	<a href="#folders" class="iconbutton search" title="<roundcube:label name='findfolders' />" tabindex="0"><roundcube:label name='findfolders' /></a>
+</h2>
+<div class="listsearchbox">
+	<div class="searchbox" role="search" aria-labelledby="aria-label-foldersearchform">
+		<h3 id="aria-label-foldersearchform" class="voice"><roundcube:label name="arialabelfoldersearchform" /></h3>
+		<label for="foldersearch" class="voice"><roundcube:label name="arialabelsearchterms" /></label>
+		<input type="text" name="q" id="foldersearch" placeholder="<roundcube:label name='findfolders' />" />
+		<a class="iconbutton searchicon"></a>
+		<roundcube:button command="reset-foldersearch" id="folderlistsearch-reset" class="iconbutton reset" title="resetsearch" label="resetsearch" />
+	</div>
+</div>
 <div id="folderslist-content" class="scroller withfooter">
 	<roundcube:object name="foldersubscription" form="subscriptionform" id="subscription-table" class="treelist listing folderlist" />
 </div>
